<resources>
    <string name="app_name">RedditRoulette</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="sign_in_to_reddit">Sign In to Reddit</string>
    <string name="as_guest_to_reddit">Guest session</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="post_image">Post Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subreddit_widget">Subreddit widget</string>
    <string name="favorites">Favorites</string>
    <string name="fav_theme_title">Theme</string>
    <string name="fav_gen_header">General</string>
    <string name="fav_sfw_title">Include Over 18 Subreddits?</string>
    <string name="no_posts">Number of posts</string>
    <string name="no_subreddits">Number of Subreddits</string>
    <string name="newest_first">Newest first</string>
    <string name="popular">Popular</string>
    <string name="subscribed">Subscribed</string>
    <string name="saved">Saved</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="reddit_user_tag">u/%s</string>
</resources>
