<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/fav_gen_header">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/fav_theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="10"
            app:entries="@array/no_elements"
            app:entryValues="@array/no_elements"
            app:key="no_posts"
            app:title="@string/no_posts"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="10"
            app:entries="@array/no_elements"
            app:entryValues="@array/no_elements"
            app:key="no_subreddits"
            app:title="@string/no_subreddits"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="sfw"
            app:title="@string/fav_sfw_title" />

    </PreferenceCategory>

</PreferenceScreen>
